2010-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:)
	(test_xshm): Don't give up on xshm when pixmaps aren't supported.
	Based on proposal by Derk Fawcus <dfawcus+lists-gnustep-dev@employees.org>.

2010-01-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:):
	* Source/art/ARTGState.m (-GSSetDevice:):
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:):
	Fix bug #28590 (with a little help from Fred Kiefer).

2010-01-21 15:45-EST Riccardo Mottola <rmottola@users.sf.net>
	Committed by: Gregory John Casamento <greg.casamento@gmail.com>

	* Source/win32/w32_text_focus.m: Correction for extra event which 
	was causing main/key windows to get out of sync in the backend and 
	gui.

2010-01-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerEvent.m (-processEvent:):
	* Source/x11/XGServerWindow.m (-_wm_state:, -_ewmh_state, -_checkStyle,
	-_rootWindowForScreen:, -window::::, -nativeWindow:::::): Revise
	detection of window miniaturization and deminiaturization based on
	ICCCM WM_STATE property.
	* Source/x11/XGServerWindow.m (-miniwindow:): Add special case for
	metacity window manager to avoid miniaturizing shaded windows.

2010-01-14 05:41-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h: Added decodeWM_MOUSEACTIVATE:..
	* Source/win32/w32_general.m: Added call to decodeWM_COMMAND:
	to -[GSTheme processCommand:] the theme callback which handles 
	native menus, 

2010-01-12 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Add missing comma after name of selection atom.

2010-01-10 Riccardo Mottola <rmottola@users.sf.net>

	* Source/win32/w32_activate.m: generate GSAppKitWindowLeave leave
	events.

2010-01-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/w32_text_focus.m: Small clean up in focus handling.

2009-12-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m: